--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 MONGO_URL=mongodb://localhost:27017/teslodb
+JWT_SECRET_SEED=Est03sun1SeedDeMisTOKENS@12312a
+#Variables publicas(se trae al frontend)
+NEXT_PUBLIC_TAX_RATE = 0.15
