--- a/package.json
+++ b/package.json
@@ -15,17 +15,28 @@
     "@mui/material": "^5.11.8",
     "@mui/x-data-grid": "^5.17.24",
     "@next/font": "13.1.6",
+    "@types/bcryptjs": "^2.4.2",
     "@types/node": "18.13.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.10",
+    "axios": "^1.3.4",
+    "bcryptjs": "^2.4.3",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
+    "js-cookie": "^3.0.1",
+    "js-cookies": "^1.0.4",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.1",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.2",
     "react-slideshow-image": "^4.2.0",
     "swr": "^2.0.3",
     "typescript": "4.9.5"
+  },
+  "devDependencies": {
+    "@types/js-cookie": "^3.0.3",
+    "@types/jsonwebtoken": "^9.0.1"
   }
 }
