Implementation Next Auth

--- a/.env
+++ b/.env
@@ -1,4 +1,10 @@
 MONGO_URL=mongodb://localhost:27017/teslodb
+
 JWT_SECRET_SEED=Est03sun1SeedDeMisTOKENS@12312a
+NEXTAUTH_SECRET=Est03sun1SeedDeMisTOKENS@12312a
+
 #Variables publicas(se trae al frontend)
 NEXT_PUBLIC_TAX_RATE = 0.15
+
+GITHUB_ID=f595c0cab62a42df9bf3
+GITHUB_SECRET=b359365e5cfe2f9af5f5c875d6ce1a7cb804c309
