--- a/.env.template
+++ b/.env.template
@@ -1,6 +1,11 @@
 MONGO_URL=mongodb://localhost:27017/teslodb
 
 JWT_SECRET_SEED=
+NEXTAUTH_SECRET=
 
 #Variables
 NEXT_PUBLIC_TAX_RATE = 0.15
+
+GITHUB_ID=
+GITHUB_SECRET=
+
